--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin-recipes</title>
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
     <h3>Chef AATIQ</h3>
-    <img src="../images/chef.jpg">
-
+    <img src="../images/chef.jpg" alt="Picture of Chef" />
     <h4>List of Recipes</h4>
     <ul>
         <li>
@@ -25,7 +24,6 @@
             <a href="recipes/chocolate-milk.html">Chocolate Milk</a>
         </li>
     </ul>
-
 </body>
 
 </html>
