--- a/recipes/chocolate-milk.html
+++ b/recipes/chocolate-milk.html
@@ -2,56 +2,35 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chocolate Milk</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chocolate Milk Recipes</title>
 </head>
 
 <body>
     <h1>Chocolate milk</h1>
     <img src="../images/download.jpeg" alt="A glass of chocolate milk with
-            undissolved chocolate powder floating in the surface of the milk." width="600">
+            undissolved chocolate powder floating in the surface of the milk." width="600" />
     <h2>Description</h2>
-    <p>
-        A perfect, not too sweet, chocolate milk to drink in the afternoon.
-    </p>
+    <p>A perfect, not too sweet, chocolate milk to drink in the afternoon.</p>
     <h2>Ingredients</h2>
     <ul>
-        <li>
-            10ml of cream.
-        </li>
-        <li>
-            290ml of 3% milk.
-        </li>
-        <li>
-            8g of chocolate powder (I use nesquick).
-        </li>
+        <li>10ml of cream.</li>
+        <li>290ml of 3% milk.</li>
+        <li>8g of chocolate powder (I use nesquick).</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>
-            Add 10ml of cream to a glass.
-        </li>
-        <li>
-            Add 290ml of 3% milk to the glass.
-        </li>
-        <li>
-            Mix the cream and the milk with a spoon.
-        </li>
-        <li>
-            Add 8g of chocolate powder.
-        </li>
+        <li>Add 10ml of cream to a glass.</li>
+        <li>Add 290ml of 3% milk to the glass.</li>
+        <li>Mix the cream and the milk with a spoon.</li>
+        <li>Add 8g of chocolate powder.</li>
         <li>
             Mix as much as you like (I usually prefer to mix so that some of the power is still undissolved in the surface of the milk).
         </li>
-        <li>
-            Drink!
-        </li>
+        <li>Drink!</li>
     </ol>
-
-
-
     <a href="../index.html">Go to home page</a>
 </body>
 
