--- a/recipes/currried-egg-sandwich.html
+++ b/recipes/currried-egg-sandwich.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Curried Egg Sandwich</h1>
-    <img src="../images/egg.webp" alt="EGG Sandwich PIC" />
+    <img src="../images/egg.webp" alt="Picture of EGG Sandwich" />
     <h2>Description</h2>
     <p>Delicious curried egg salad sandwiches guaranteed to fill you up.</p>
     <h2>Ingredients</h2>
