--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -1,52 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chicken Biryani Recipe</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Chicken Biryani</h1>
     <img src="../images/biriyani.jpg" alt="Picture of chicken biryani" />
     <h3>Description:</h3>
     <p>
-        Biryani is a mixed rice dish originating among the Muslims of the Indian subcontinent. It is made with Indian spices, rice, and meat usually that of chicken, goat, lamb, prawn, fish, and sometimes, in addition, eggs or vegetables such as potatoes in certain
-        regional varieties.
+      Biryani is a mixed rice dish originating among the Muslims of the Indian
+      subcontinent. It is made with Indian spices, rice, and meat usually that
+      of chicken, goat, lamb, prawn, fish, and sometimes, in addition, eggs or
+      vegetables such as potatoes in certain regional varieties.
     </p>
     <h3>Ingredients:</h3>
     <ul>
-        <li>
-            1 pound skinless, boneless chicken breast halves, cut into bite size pieces
-        </li>
-        <li>2 onions, chopped</li>
-        <li>4 green chile peppers, chopped</li>
-        <li>4 tablespoons vegetable oil</li>
-        <li>2 tablespoons ginger garlic paste</li>
-        <li>1 tablespoon poppy seeds</li>
-        <li>2 tablespoons chili powder</li>
-        <li>2 cups water</li>
-        <li>1 tablespoon garam masala</li>
-        <li>1 pinch ground turmeric</li>
-        <li>salt to taste</li>
+      <li>
+        1 pound skinless, boneless chicken breast halves, cut into bite size
+        pieces
+      </li>
+      <li>2 onions, chopped</li>
+      <li>4 green chile peppers, chopped</li>
+      <li>4 tablespoons vegetable oil</li>
+      <li>2 tablespoons ginger garlic paste</li>
+      <li>1 tablespoon poppy seeds</li>
+      <li>2 tablespoons chili powder</li>
+      <li>2 cups water</li>
+      <li>1 tablespoon garam masala</li>
+      <li>1 pinch ground turmeric</li>
+      <li>salt to taste</li>
     </ul>
     <h3>Steps:</h3>
     <ol>
-        <li>
-            Rinse chicken pieces and pat dry. Set aside. Grind poppy seeds into a paste.
-        </li>
+      <li>
+        Rinse chicken pieces and pat dry. Set aside. Grind poppy seeds into a
+        paste.
+      </li>
 
-        <li>
-            In a large skillet, saute onions and green chiles in oil until golden brown. Add ginger garlic paste and continue to saute. Add poppy seed paste and reserved chicken pieces, continuing to saute. Stir all together; after chicken is well mixed with the
-            'gravy', add the red chili powder and pour 2 cups of water over the mixture. Cover skillet and let simmer about 12 to 15 minutes, until chicken is cooked through.
-        </li>
+      <li>
+        In a large skillet, saute onions and green chiles in oil until golden
+        brown. Add ginger garlic paste and continue to saute. Add poppy seed
+        paste and reserved chicken pieces, continuing to saute. Stir all
+        together; after chicken is well mixed with the 'gravy', add the red
+        chili powder and pour 2 cups of water over the mixture. Cover skillet
+        and let simmer about 12 to 15 minutes, until chicken is cooked through.
+      </li>
 
-        <li>
-            After chicken is 'well-boiled' (the oil should be floating on top of the skillet liquid), add the garam masala and turmeric powder and turn off the stove. Stir all together and serve.
-        </li>
+      <li>
+        After chicken is 'well-boiled' (the oil should be floating on top of the
+        skillet liquid), add the garam masala and turmeric powder and turn off
+        the stove. Stir all together and serve.
+      </li>
     </ol>
     <a href="../index.html">Go to home page</a>
-</body>
+  </body>
 </html>
